syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{
	rpc GetCustomerInfo(BaseRequest) returns (BaseResponse);
	//rpc GetNewCustomers(NewCustomerRequest) returns (stream CustomerModel);
}

message NewCustomerRequest{

}

message BaseRequest {
	int32 userID = 1;
}

message BaseResponse {
	string firstName = 1;
	string lastName = 2;
	string emailAddress = 3;
	bool isAlive = 4;
	int32 age = 5;
}